Implemented several algorithms, fixed bugs. Added total agents count.