@@ -3,18 +3,18 @@ package cz.cuni.mff.kotal.backend.algorithm;
 import cz.cuni.mff.kotal.simulation.Agent;
 import cz.cuni.mff.kotal.simulation.graph.SimulationGraph;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
 import java.util.stream.Collectors;
 
-public class Semaphore implements Algorithm {
-	private final SimulationGraph graph;
-	private final Map<Long, Map<Long, Agent>> stepOccupiedVertices = new HashMap<>();
+public class Semaphore extends SafeLines {
 	private final int directions;
 	private final long greenTime;
 	private final long directionTime; // TODO
 
 	public Semaphore(SimulationGraph graph) {
-		this.graph = graph;
+		super(graph);
 
 		Integer longestPath = graph
 			.getLines().values().stream()
@@ -51,44 +51,16 @@ public class Semaphore implements Algorithm {
 		}
 
 		List<Agent> plannedAgents = straightAgents.stream().filter(agent -> planAgent(agent, step) != null).collect(Collectors.toList());
-		plannedAgents.addAll(turningAgents.stream().filter(agent -> planAgent(agent, step) != null).collect(Collectors.toList()));
+		plannedAgents.addAll(turningAgents.stream().filter(agent -> planAgent(agent, step) != null).toList());
 
 		return plannedAgents;
 	}
 
 	private boolean isFromCurrentDirection(Agent agent, long step) {
-		return graph.getVertex(agent.getStart()).getType().getDirection() % directions == (step / directionTime) % directions;
+		return graph.getVertex(agent.getEntry()).getType().getDirection() % directions == (step / directionTime) % directions;
 	}
 
 	private boolean agentGoingStraight(Agent agent) {
-		return Math.abs(
-			graph.getVertex(agent.getStart()).getType().getDirection() -
-				graph.getVertex(agent.getEnd()).getType().getDirection()
-		) % directions == 0;
-	}
-
-	@Override
-	public Agent planAgent(Agent agent, long step) {
-		List<Long> path = graph.getLines().get(agent.getStart()).get(agent.getEnd());
-		for (int i = 0; i < path.size(); i++) {
-			long actualStep = step + i;
-			if (stepOccupiedVertices.containsKey(actualStep)) {
-				if (stepOccupiedVertices.get(actualStep).containsKey(path.get(i)) ||
-					(i >= 1 && stepOccupiedVertices.containsKey(actualStep - 1) &&
-						stepOccupiedVertices.get(actualStep - 1).containsKey(path.get(i)) &&
-						stepOccupiedVertices.get(actualStep - 1).get(path.get(i)) == stepOccupiedVertices.get(actualStep).get(path.get(i - 1)))
-				) {
-					return null;
-				}
-			} else {
-				stepOccupiedVertices.put(actualStep, new HashMap<>());
-			}
-		}
-
-		agent.setPath(path);
-		for (int i = 0; i < path.size(); i++) {
-			stepOccupiedVertices.get(step + i).put(path.get(i), agent);
-		}
-		return agent;
+		return Math.abs(agent.getEntryDirection() - agent.getExitDirection()) % directions == 0;
 	}
 }
